@@ -2,7 +2,10 @@ CHANGES IN VERSION 1.1.12
 ------------------------
  o implement barplot for enrichResult <2012-03-18, Sun>
  o bug fixed for setReadable method <2012-03-19, Mon>
- o add logFC parameter for cnet plot, support color gene nodes by their expression value (log fold change) <2012-03-21, Wed>
+ o add logFC parameter for cnet plot, support color gene nodes by 
+   their expression value (log fold change) <2012-03-21, Wed>
+ o add mapping entrezgene ID and gene Name for organisms 
+   other than human, mouse and yeast. <2012-03-22, Thu>
 
 CHANGES IN VERSION 1.1.11
 ------------------------
